--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,6 @@
     <string name="action_help">Help</string>
     <string name="action_about">About</string>
     <string name="action_settings">Settings</string>
-    <string name="action_main">Main</string>
-    <string name="action_game">Game</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -233,7 +231,7 @@
     <!-- ###USER DEFINED REFERENCE EDITOR### -->
     <string name="title_activity_ref_editor">Reference Editor</string>
     <string name="title_activity_ref_viewer">User Defined References</string>
-    <string name="list_item">Empty Slot</string>
+    <string name="list_item">Free Slot</string>
     <string name="edit_dialog_title">Edit Reference Object</string>
     <string name="toast_input_failure">Invalid input.</string>
     <string name="toast_edit_done">User defined reference sucessfully set.</string>
@@ -272,7 +270,7 @@
     <string name="help_uom">Units of Measurement</string>
     <string name="help_ref_types">Reference Type Selection</string>
     <string name="help_ref_editor">Edit user defined references</string>
-    <string name="pref_uom_summary">You can set the units of measurements to be used in the screen ruler.</string>
+    <string name="pref_uom_summary">You can set the units of measurements to be used in the camera ruler.</string>
     <string name="pref_ref_types_summary">You can disable certain types of predefined reference objects. They won\'t show up in the menu during reference object choice.</string>
     <string name="pref_ref_editor_summary">Here you can define and manage user defined reference objects (up to 10).</string>
 </resources>
